Changelog
=========

2.0b1 - Unreleased
------------------


2.0a2 - 2009-11-18
------------------

- Removed reference to non-existent profile in plone.app.portlets.
  [hannosch]

2.0a1 - 2009-11-13
------------------

- Remove the "hide" option as this is now available to all portlets (PLIP 9286)
  [igbun]

- Adjusted test setup to Plone 5.
  [hannosch]

- Added the z3c.autoinclude entry point so this package is automatically loaded
  on Plone 3.3 and above.
  [hannosch]

- Declare test dependencies in an extra.
  [hannosch]

- Specify package dependencies.
  [hannosch]

- Added 'tile' CSS class to the links within dt.portletHeader and 
  dd.portletFooter for static portlet's template
  [spliter]

1.2.1 - 2009-11-25
------------------

- Fixed a syntax error introduced in the last change.
  [hannosch]

1.2 - 2009-11-25
----------------

- Ensure that text output is passed through the safe-html transform to protect
  against malicious text. This also ensures the resolve uid behavior works when
  only TinyMCE and not Kupu is installed.
  [hannosch]

- Removed msgids in portlets.xml. There is no support for
  msgids in the import of portlets.xml implementation.
  This allows to extract translatable strings with i18ndude.
  [vincentfretin]

- Added transform to resolve uids.
  [lrowe]

1.2rc1 - March 27, 2009
-----------------------

- The portlet was incorrectly using the 'Manage portlet' permission. It now
  uses a custom permission with the same default roles.
  Fixes http://dev.plone.org/plone/ticket/8403.
  [optilude]

1.1.5 - August 18th, 2008
-------------------------

- Fixed a typo in CSS class name. This closes
  http://dev.plone.org/plone/ticket/8119.
  [hannosch]

1.1.2 - June 1st 2008
---------------------

- Added more i18n in the main python file as the i18n in portlets.xml
  is not used.  [maurits]

- Added option to (temporarily) hide the portlet without needing to
  delete it.  [maurits]

1.1.0 - April 20th 2008
-----------------------
